<resources>
    <string name="app_name">HGSS</string>
    <string name="phone_number">broj telefona</string>
    <string name="enter">unesi</string>
    <string name="confirm">potvrdi</string>
    <string name="loading_pg">Učitavam..</string>
    <string name="error">Pogreška</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_news">Vijesti</string>
    <string name="nav_tips">Savjeti</string>
    <string name="nav_first_aid">Prva pomoć</string>
    <string name="nav_help_someone">Pomogni u nevolji</string>
    <string name="login_username">Korisničko ime</string>
    <string name="login_password">Lozinka</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_title">Naslov</string>
    <string name="action_title_hint">Unesi naslov akcije</string>
    <string name="action_details">Opis akcije</string>
    <string name="action_details_hint">Unesi opis akcije</string>
    <string name="enter_location_tv">Lokacija okupljanja</string>
    <string name="action_filter">Specijalnost spašavatelja</string>
    <string name="speleolog">Speleolog</string>
    <string name="alpinist">Alpinist</string>
    <string name="helikopter">Helikoptersko spašavanje</string>
    <string name="spas_na_vodi">Spašavanje na vodi</string>
    <string name="people_number">Potreban broj sudionika</string>
    <string name="new_action">Pokreni akciju</string>
    <string name="title_activity_map">Map</string>
    <string name="add_meet_location">Dodaj lokaciju</string>
    <string name="needed_marker">Potrebno je označiti lokaciju</string>
    <string name="send_new_action">Slanje nove akcije</string>
    <string name="no_available">Dostupnost</string>
    <string name="send_days">Pošalji</string>
    <string name="nav_new_action">Kreiraj akciju</string>
    <string name="nav_available">Dostupnost</string>
    <string name="nav_action_list">Lista akcija</string>
    <string name="available_success">Uspješno slanje</string>
    <string name="set_available">Postavljanje</string>
    <string name="left_progress">Akcija u toku:</string>
    <string name="start_date">Datum početka pretrage</string>
    <string name="leader">Voditelj</string>
    <string name="add_me">Uključi me u potragu</string>
    <string name="target_people_number">Traženi broj ljudi</string>
    <string name="current_people_number">Uključeni broj ljudi u potragu</string>
    <string name="maps_btn">Karta</string>
    <string name="nav_logout">Odjava</string>
    <string name="in_progress_tnx">Trenutno sudjelujete u akciji\nHvala Vam</string>
</resources>
