<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_action"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_new_action"/>
        <item
            android:id="@+id/nav_action_list"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_action_list"/>
        <item
            android:id="@+id/nav_available"
            android:icon="@drawable/ic_event_available"
            android:title="@string/nav_available"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_backspace"
            android:title="@string/nav_logout"/>
    </group>
</menu>
